website is ready

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         </span>
                     </a>
                 </div>
-            </div>   
+            </div>
         </section>
         <section class="committee">
             <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-8">
@@ -463,7 +463,7 @@
             </div>
         </section>
         <section class="roadmap">
-            <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-8">
+            <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-8 mb-4">
                 <ul class="event-list p-0">
                     <li class="event-list-item">
                         <div class="event-block d-flex flex-row mb-3 pb-3">
@@ -560,7 +560,92 @@
         </section>
     </main>
     <footer>
+        <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-8 d-flex flex-row align-items-start">
+            <div class="contacts d-flex flex-column">
+                <h2 class="display-5 mb-4 d-flex">
+                    Responsible:
+                </h2>
+                <ul class="list p-0 list-unstyled text-left">
+                    <li class="list-item">
 
+                        <h5 class="mb-4">
+                            from the Secretariat of the consortium CASCADE:
+                        </h5>
+                        <div class="person mb-5">
+                            <p>
+                                Alim Pulatov - Professor, Executive Secretary of CASCADE consortium
+                            </p>
+                            <h6>
+                                Contacts:
+                            </h6>
+                            <p>
+                                phone: <a href="tel:+998(71) 237-54-39">+998(71) 237-54-39</a>
+                            </p>
+                            <p>
+                                mail: <a href="mailto:alimpulatov@mail.ru">alimpulatov@mail.ru</a>
+                            </p>
+                        </div>
+                    </li>
+                    <li class="list-item">
+                        <h5 class="mb-4">
+                            on the part of TIIAME:
+                        </h5>
+                        <div class="person mb-5">
+                            <p>
+                                Khabibullo Pirmatov – coordinator of the CASCADE consortium from TIIAME, EcoGIS center,
+                                associate Professor, PhD Slovak University of Agriculture, Slovakia
+                            </p>
+                            <h6>
+                                Contacts:
+                            </h6>
+                            <p>
+                                phone: <a href="tel:+998(71) 237-19-34">+998(71) 237-19-34</a>
+                            </p>
+                            <p>
+                                mail: <a href="mailto:hpirmatov@mail.ru">hpirmatov@mail.ru</a>
+                            </p>
+                        </div>
+                        <div class="person mb-3">
+                            <p>
+                                Khabibullo Pirmatov – coordinator of the CASCADE consortium from TIIAME, EcoGIS center,
+                                associate Professor, PhD Slovak University of Agriculture, Slovakia
+                            </p>
+                            <h6>
+                                Contacts:
+                            </h6>
+                            <p>
+                                phone: <a href="tel:+998(71) 237-19-34">+998(71) 237-19-34</a>
+                            </p>
+                            <p>
+                                mail: <a href="mailto:hpirmatov@mail.ru">hpirmatov@mail.ru</a>
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="map d-flex flex-column">
+                <h2 class="display-5 mb-4 d-flex ">
+                    TASHKENT INSTITUTE OF IRRIGATION AND AGRICULTURAL MECHANIZATION ENGINEERS
+                </h2>
+                <div class="google-map mb-3">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d315.06679872708355!2d69.23977863431953!3d41.299346666319984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8b5b3e953c75%3A0xe8e8f91da680c6ed!2sEcoGIS!5e0!3m2!1sru!2s!4v1640686393172!5m2!1sru!2s"
+                        width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+                <div class="counter d-flex justify-content-between">
+                    <a  href="https://info.flagcounter.com/Khzx"><img
+                            src="https://s01.flagcounter.com/mini/Khzx/bg_F0F0F0/txt_000000/border_F0F0F0/flags_0/"
+                            alt="Flag Counter" border="0"></a>
+                    <a href="https://info.flagcounter.com/SSNo"><img
+                            src="https://s05.flagcounter.com/countxl/SSNo/bg_F0F0F0/txt_000000/border_F0F0F0/columns_4/maxflags_12/viewers_3/labels_1/pageviews_1/flags_0/percent_0/"
+                            alt="Flag Counter" border="0"></a>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="add-info d-flex justify-content-center p-3 px-md-4 mb-3 ">
+            <span class="EcoGIS display-5">EcoGIS© 2021. All Rights Reserved.</span>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
@@ -568,10 +653,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous">
     </script>
-     <script type="text/javascript" src=
-     "https://translate.google.com/translate_a/element.js?
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?
              cb=googleTranslateElementInit">
-         </script> 
+    </script>
     <script src="js/index.js"></script>
     <script src="js/ru.js"></script>
 </body>
