--- a/index(ru).html
+++ b/index(ru).html
@@ -716,8 +716,8 @@
                 </div>
             </div>
         </div>
-        <hr>
-        <div class="add-info d-flex justify-content-center p-3 px-md-4 mb-3 ">
+        <hr class="m-0">
+        <div class="add-info d-flex justify-content-center p-4">
             <span class="EcoGIS display-5">ЭкоГИС© 2021. Все права защищены.</span>
         </div>
     </footer>
