--- a/index(uz).html
+++ b/index(uz).html
@@ -720,8 +720,8 @@
                 </div>
             </div>
         </div>
-        <hr>
-        <div class="add-info d-flex justify-content-center p-3 px-md-4 mb-3 ">
+        <hr class="m-0">
+        <div class="add-info d-flex justify-content-center p-4">
             <span class="EcoGIS display-5">EcoGIS© 2021. All Rights Reserved.</span>
         </div>
     </footer>
