--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a class="pl-5 pr-1 text-dark" href="index.html">EN</a>
                 <a class="p-0 text-dark" href="#">|</a>
                 <a class="p-1 text-dark disabled" href="index(ru).html">RU</a>
-                <a class="p-0 text-dark disabled" href="in">|</a>
+                <a class="p-0 text-dark disabled" href="#">|</a>
                 <a class="pl-1 pr-2 text-dark" href="index(uz).html">UZ</a>
 
             </nav>
